add FAQ update to list of PyX 0.6 TODO items
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1500 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -69,6 +69,7 @@ TODO for 0.6:
     - deco module:
       - wriggle decorator
       - smoothed decorator
+    - FAQ
 
 0.6 (XXXX/XX/XX):
   - bbox module:
