--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -388,7 +388,7 @@ tg = graph.graphxy(width=10,\\
 \end{progcode}
 }
 
-\question{a}{How do I get rid of the zero line?}
+\question{o}{How do I get rid of the zero line?}
 {Obsolete with \PyX{} 0.6. To be deleted.}
 {\label{q:zeropathattrs}
 The \texttt{axispainter} takes an argument \texttt{zeropathattrs} which 
@@ -438,7 +438,7 @@ you will obtain a circle filled in green with a red borderline.
 }
 
 \question{a}{How do I choose the line style?}
-{checked for 0.6}
+{probably one needs graph.style.symbollie now}
 {If you do not want to use symbols, you can set the line style as in this
 example
 \begin{progcode}
